Fix Issue #494: Hide and show option visible at same time

--- a/apps/frontend/src/global.css
+++ b/apps/frontend/src/global.css
@@ -16,6 +16,11 @@ body {
   overflow: auto;
 }
 
+input::-ms-reveal,
+input::-ms-clear {
+  display: none;
+}
+
 /* Custom variables for themes */
 [data-theme='dracula'] {
   --outline-border-color: 233, 5%, 33%;
